# MCU-mc-multimodal-agent

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
docs/superpowers/plans/: 2026-05-07-hotbar-verify.md
docs/superpowers/specs/: 2026-05-07-hotbar-verify-design.md  2026-05-07-park-snapshot-action-verify-design.md
scripts/: calibrate_gui_cursor.py  make_banner.py
site/: index.html  styles.css
