[project]
name = "mcu-mc-multimodal-agent"
version = "0.1.0"
description = "MCU AgentBeats purple agent wrapper for mc-multimodal-agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "mc-multimodal-agent",
    "third_party",
    "submissions",
    "results",
    "node_modules",
    "dist",
]
